# cc-atlas

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USAGE.md  cc-atlas  package-lock.json
docs/: MEMORY_FILE_GUIDE.md  notes.md  plan.md
docs/features/: chat-export.md
docs/plans/: change-watcher.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: client.ts  docs.ts  memory.ts
frontend/src/components/: DocsTree.tsx  Editor.css  Editor.tsx  Header.css  Header.tsx  MemoryTree.tsx  Sidebar.css  Sidebar.tsx  TreeView.css  TreeView.tsx
scripts/: CLAUDE.md  dev.sh  install.sh  start.sh
src/: CLAUDE.md  analyzer.rs  lib.rs  main.rs  markdown.rs  models.rs  server.rs
src/server/: error.rs  handlers.rs  mod.rs  routes.rs
src/services/: analyzer.rs  chat_exporter.rs  docs.rs  mod.rs
src/tests/: markdown_tests.rs  mod.rs
src/utils/: mod.rs  paths.rs
